fix wrap

--- a/src/_scss/pages/search/filters/location/location.scss
+++ b/src/_scss/pages/search/filters/location/location.scss
@@ -27,7 +27,6 @@
     
                 .location-label__with-tt {
                     display: flex;
-                    white-space: nowrap;
                     align-items: center;
                     .advanced-search__cd-tooltip {
                         opacity: 1;
